Fixed icon spacing issue on work history page

--- a/css/starter-template.css
+++ b/css/starter-template.css
@@ -8,3 +8,5 @@ body {
 .date {
   font-size: 120%;
   }
+.icon{
+  margin-right: 1.0rem}
